--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,3 +11,14 @@
   %body
     %main.container.mx-auto.mt-28.px-5.flex
       = yield
+
+
+    / component
+    %footer{class: "relative py-20 flex flex-col items-center bg-cyan-900 overflow-hidden md:py-40"}
+      %div{class: "relative z-[1] container m-auto px-6 md:px-12"}
+        %div{class: "m-auto md:w-10/12 lg:w-8/12 xl:w-6/12"}
+          %div{class: "flex flex-wrap items-center justify-between md:flex-nowrap"}
+            %div{class: "w-10/12 m-auto  mt-16 space-y-6 text-center sm:text-left sm:w-5/12 sm:mt-auto"}
+              %span{class: "block text-gray-300"}
+                Salym Senyonga &copy; 2024
+        %div{"aria-hidden": "true", class: "bg-layers bg-scale w-56 h-56 m-auto rounded-full md:w-[30rem] md:h-[30rem] md:blur-3xl"}
