Improve title tag value
* Get rid of the "|" character before base title when custom title is
omitted by the view.
* Also, remove gratuitous “Home” string from home page title

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title Rails v7 Primer
-    %title= "#{yield(:title)} | Rails v7 Primer"
+    %title= full_title(yield(:title))
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
     = csrf_meta_tags
     = csp_meta_tag
