--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,1 +1,11 @@
-%h1 Rails v7 Primer home page
+%section{class: "gradient w-full mx-auto text-center pt-6 pb-12"}
+  %h2{class: "w-full my-2 text-5xl font-black leading-tight text-center text-white"}
+    Welcome to Salym's Rails v7 Primer!
+  %div{class: "w-full mb-4"}
+    %div{class: "h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"}
+
+  %h3{class: "my-4 text-3xl font-extrabold"}
+    This is a project to showcase some of Rails' features.
+
+  %button{class: "mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded my-6 py-4 px-8 shadow-lg"}
+    User Sign up functionality
