--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,36 +9,7 @@
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
   %body{class: "gradient leading-relaxed tracking-wide flex flex-col"}
-
-    %header
-      %nav{class: "bg-white border-gray-200 dark:bg-gray-900"}
-        %div{class: "max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"}
-          %a{href: "https://www.salyms.com/", class: "flex items-center space-x-3 rtl:space-x-reverse"}
-            =image_tag("rails-1.svg", class: "h-4", alt: "Ruby on Rails logo")
-            %span{class: "self-center text-2xl font-semibold whitespace-nowrap dark:text-white"} Rails v7 Primer
-          %button{"data-collapse-toggle": "navbar-default", type: "button", class: "inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600", "aria-controls": "navbar-default", "aria-expanded": "false"}
-            %span{class: "sr-only"} Open main menu
-            %svg{class: "w-5 h-5", "aria-hidden": "true", xmlns: "http://www.w3.org/2000/svg", fill: "none", viewBox: "0 0 17 14"}
-              %path{stroke: "currentColor", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2", d: "M1 1h15M1 7h15M1 13h15"}
-          %div{class: "hidden w-full md:block md:w-auto", id: "navbar-default"}
-            %ul{class: "font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"}
-              %li
-                %a{href: "#{root_url}", class: "block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500", "aria-current": "page"} Home
-              %li
-                %a{href: "#{static_pages_about_url}", class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"} About
-              %li
-                %a{href: "#{static_pages_help_url}", class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"} Help
-
+    = render "layouts/header"
     %main{class: "container mx-auto mt-28 px-5 flex"}
       = yield
-
-
-    / component
-    %footer{class: "relative py-20 flex flex-col items-center bg-cyan-900 overflow-hidden md:py-40"}
-      %div{class: "relative z-[1] container m-auto px-6 md:px-12"}
-        %div{class: "m-auto md:w-10/12 lg:w-8/12 xl:w-6/12"}
-          %div{class: "flex flex-wrap items-center justify-between md:flex-nowrap"}
-            %div{class: "w-10/12 m-auto  mt-16 space-y-6 text-center sm:text-left sm:w-5/12 sm:mt-auto"}
-              %span{class: "block text-gray-300"}
-                Salym Senyonga &copy; 2024
-        %div{"aria-hidden": "true", class: "bg-layers bg-scale w-56 h-56 m-auto rounded-full md:w-[30rem] md:h-[30rem] md:blur-3xl"}
+    = render "layouts/footer"
