--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,7 +5,7 @@
         %div{class: "w-full space-x-12 flex justify-center text-gray-300 sm:w-7/12 md:justify-start"}
           %ul{class: "list-disc list-inside space-y-8"}
             %li{class: "hover:text-sky-400 transition"}
-              =link_to "Contact", static_pages_contact_url
+              =link_to "Contact", contact_path
         %div{class: "w-10/12 m-auto  mt-16 space-y-6 text-center sm:text-left sm:w-5/12 sm:mt-auto"}
           %span{class: "block text-gray-300"}
             Salym Senyonga &copy; 2024
