--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 %header
   %nav{class: "bg-white border-gray-200 dark:bg-gray-900"}
     %div{class: "max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"}
-      %a{href: "https://www.salyms.com/", class: "flex items-center space-x-3 rtl:space-x-reverse"}
+      =link_to root_path, class: "flex items-center space-x-3 rtl:space-x-reverse" do
         =image_tag("rails-1.svg", class: "h-4", alt: "Ruby on Rails logo")
         %span{class: "self-center text-2xl font-semibold whitespace-nowrap dark:text-white"} Rails v7 Primer
       %button{"data-collapse-toggle": "navbar-default", type: "button", class: "inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600", "aria-controls": "navbar-default", "aria-expanded": "false"}
