Provide /signup path
* Use the more intuitive /signup path in stead of /users/new
* Use a link instead of button for the Register element

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -7,5 +7,4 @@
   %h3{class: "my-4 text-3xl font-extrabold"}
     This is a project to showcase some of Rails' features.
 
-  %button{class: "mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded my-6 py-4 px-8 shadow-lg"}
-    User Sign up functionality
+  =link_to 'Register', signup_path, class: "mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded my-6 py-4 px-8 shadow-lg"
