--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,5 @@
+- provide(:title, 'Register')
+
 %div
-  %h1{class: "font-bold text-4xl"} Users#new
-  %p Find me in app/views/users/new.html.erb
+  %h1{class: "font-bold text-4xl"} Signup
+  %p This is the user registration page
