--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,3 +13,4 @@
     %main{class: "container mx-auto mt-28 px-5 flex"}
       = yield
     = render "layouts/footer"
+    = debug(params) if Rails.env.development?
