Display feedback for invalid signup form data
Also update the style for the submit button on the signup page.

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -12,6 +12,14 @@
 
 */
 
+div.field_with_errors > label > span {
+    @apply block mb-2 text-sm font-medium text-red-700 dark:text-red-500;
+}
+
+div.field_with_errors > :is(input, textarea, select) {
+    @apply bg-red-50 border border-red-500 text-red-900 placeholder-red-700 text-sm rounded-lg focus:ring-red-500 dark:bg-gray-700 focus:border-red-500 block w-full p-2.5 dark:text-red-500 dark:placeholder-red-500 dark:border-red-500
+}
+
 .gradient {
   background-image: linear-gradient(-225deg, #cbbacc 0%, #2580b3 100%);
 }
