--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,11 @@
   %body{class: "gradient leading-relaxed tracking-wide flex flex-col"}
     = render "layouts/header"
     %main{class: "container mx-auto mt-28 px-5 flex"}
+      - flash.each do |message_type, message|
+        - if message_type.eql? 'success'
+          %div{class: "p-4 ml-32 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400", role: "alert"}
+            %span{class: "font-medium"}
+              = message
       = yield
     = render "layouts/footer"
     = debug(params) if Rails.env.development?
