--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,6 +16,10 @@
           %div{class: "p-4 ml-32 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400", role: "alert"}
             %span{class: "font-medium"}
               = message
+        - elsif message_type.eql? 'danger'
+          %div{class: "p-4 ml-32 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400", role: "alert"}
+            %span{class: "font-medium"}
+              = message
       = yield
     = render "layouts/footer"
     = debug(params) if Rails.env.development?
