--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = csp_meta_tag
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
+    = javascript_importmap_tags
   %body{class: "gradient leading-relaxed tracking-wide flex flex-col"}
     = render "layouts/header"
     %main{class: "container mx-auto mt-28 px-5 flex"}
