--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,3 +16,21 @@
             %a{href: "#{about_path}", class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"} About
           %li
             %a{href: "#{help_path}", class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"} Help
+            - if logged_in?
+              %li= link_to "Users", '#'
+
+              %li{id: "dropdownDividerButton", "data-dropdown-toggle": "dropdownDivider", class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"}
+                Account
+                %svg{class: "w-2.5 h-2.5 ms-3", "aria-hidden": "true", xmlns: "http://www.w3.org/2000/svg", fill: "none", viewBox: "0 0 10 6"}
+                  %path{stroke: "currentColor", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2", d: "m1 1 4 4 4-4"}
+              /-- Dropdown menu --
+              %div{id: "dropdownDivider", class: "z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600"}
+                %ul{class: "py-2 text-sm text-gray-700 dark:text-gray-200", "aria-labelledby": "dropdownDividerButton"}
+                  %li
+                    = link_to 'Profile', current_user, class: "block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                  %li
+                    = link_to 'Settings', '#', class: "block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                %div{class: "py-2"}
+                  = link_to 'Log out', logout_path, data: {"turbo-method": :delete}, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
+            - else
+              %li= link_to 'Log in', login_path
