--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -5,5 +5,7 @@
     %div{class: "flex-1 min-w-0"}
       %p{class: "text-sm font-medium text-gray-900 truncate dark:text-white"}
         = link_to user.name, user
+        - if current_user.admin? && !current_user?(user)
+          = "| #{link_to 'delete', user, data:{ 'turbo-method': :delete, turbo_confirm: 'Are you sure'}}"
       %p{class: "text-sm text-gray-500 truncate dark:text-gray-400"}
         = user.email
