--- a/app/views/user_mailer/password_reset.html.haml
+++ b/app/views/user_mailer/password_reset.html.haml
@@ -1,4 +1,12 @@
-%h1 User#password_reset
+%h1 Password reset
+
+%p To reset your password, click the link below.
+
+= link_to "Reset Password",
+          edit_password_reset_url(@user.reset_token, email: @user.email)
+%p
+  Please note that the link above expires in two hours.
 
 %p
-  #{@greeting}, find me in app/views/user_mailer/password_reset.html.haml
+  If you did not request a password reset, ignore this email and your password
+  will stay as is.
