--- a/app/views/user_mailer/password_reset.text.haml
+++ b/app/views/user_mailer/password_reset.text.haml
@@ -1,3 +1,8 @@
-User#password_reset
+To reset your password, click the link below:
 
-#{@greeting}, find me in app/views/user_mailer/password_reset.text.haml
+= edit_password_reset_url(@user.reset_token, email: @user.email)
+
+Please note that the link above expires in two hours.
+
+If you did not request a password reset, ignore this email and your password
+will stay as is.
