--- a/app/views/shared/_error_messages.html.haml
+++ b/app/views/shared/_error_messages.html.haml
@@ -1,11 +1,11 @@
-- if @user.errors.any?
+- if object.errors.any?
   %div{class: "text-red-600 "}
     %div{class: "flex p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"}
       %svg{class: "flex-shrink-0 inline w-4 h-4 me-3 mt-[2px]", "aria-hidden": "true", xmlns: "http://www.w3.org/2000/svg", fill: "currentColor", viewBox: "0 0 20 20"}
         %path{d: "M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"}
       %span{class: "sr-only"} Danger
       %div
-        ="The form contains #{pluralize(@user.errors.count, 'error')}"
+        ="The form contains #{pluralize(object.errors.count, 'error')}"
         %ul{class: "text-red-600 mb-6"}
-          - @user.errors.full_messages.each do |msg|
+          - object.errors.full_messages.each do |msg|
             %li{class:"list-disc"}= msg
