--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,10 +1,18 @@
-%section{class: "gradient w-full mx-auto text-center pt-6 pb-12"}
-  %h2{class: "w-full my-2 text-5xl font-black leading-tight text-center text-white"}
-    Welcome to Salym's Rails v7 Primer!
-  %div{class: "w-full mb-4"}
-    %div{class: "h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"}
+- if logged_in?
+  %div{class: "w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 md:p-8 dark:bg-gray-800 dark:border-gray-700"}
+    %aside
+      %section
+        = render 'shared/user_info'
+      %section
+        = render 'shared/micropost_form'
+- else
+  %section{class: "gradient w-full mx-auto text-center pt-6 pb-12"}
+    %h2{class: "w-full my-2 text-5xl font-black leading-tight text-center text-white"}
+      Welcome to Salym's Rails v7 Primer!
+    %div{class: "w-full mb-4"}
+      %div{class: "h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"}
 
-  %h3{class: "my-4 text-3xl font-extrabold"}
-    This is a project to showcase some of Rails' features.
+    %h3{class: "my-4 text-3xl font-extrabold"}
+      This is a project to showcase some of Rails' features.
 
-  =link_to 'Register', signup_path, class: "mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded my-6 py-4 px-8 shadow-lg"
+    =link_to 'Register', signup_path, class: "mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded my-6 py-4 px-8 shadow-lg"
