--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,10 +1,14 @@
 - if logged_in?
-  %div{class: "w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 md:p-8 dark:bg-gray-800 dark:border-gray-700"}
-    %aside
-      %section
-        = render 'shared/user_info'
-      %section
-        = render 'shared/micropost_form'
+  %div{class: "grid grid-cols-2 gap-2"}
+    %div
+      %aside
+        %section
+          = render 'shared/user_info'
+        %section
+          = render 'shared/micropost_form'
+    %div
+      %h3 Micropost feed
+      = render 'shared/feed'
 - else
   %section{class: "gradient w-full mx-auto text-center pt-6 pb-12"}
     %h2{class: "w-full my-2 text-5xl font-black leading-tight text-center text-white"}
