Add relationship stats and follow/unfollow buttons
* Display information about the followers/followed counts on the
  homepage and on the user profile page.
* Add a relationship form with dynamic follow/unfollow buttons on the
  user profile page.

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -5,6 +5,8 @@
         %section
           = render 'shared/user_info'
         %section
+          = render 'shared/relationship_stats'
+        %section
           = render 'shared/micropost_form'
     %div
       %h3 Micropost feed
