--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,8 +8,11 @@
         %div{class: "space-y-0.5"}
           %p{class: "text-lg text-black font-semibold"}
             = @user.name
+    %div
+      = render 'shared/relationship_stats'
 
   %div
+    = render 'relationship_form' if logged_in?
     - if @user.microposts.any?
       %h3= " Microposts (#{@user.microposts.count})"
       %ol{class: "max-w-md divide-y divide-gray-200 dark:divide-gray-700"}
