Landing page: Center hero content
* Fix issue where hero content, on the landing page pulled to the left
as the screen size was increased.
* Update hero copy

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -14,11 +14,11 @@
 - else
   %section{class: "gradient w-full mx-auto text-center pt-6 pb-12"}
     %h2{class: "w-full my-2 text-5xl font-black leading-tight text-center text-white"}
-      Welcome to Salym's Rails v7 Primer!
+      Welcome to Salym's Rails v7 Playground!
     %div{class: "w-full mb-4"}
       %div{class: "h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"}
 
     %h3{class: "my-4 text-3xl font-extrabold"}
-      This is a project to showcase some of Rails' features.
+      This is a project for me to experiment with Rails' features.
 
     =link_to 'Register', signup_path, class: "mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded my-6 py-4 px-8 shadow-lg"
