--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     = javascript_importmap_tags
   %body{class: "gradient leading-relaxed tracking-wide flex flex-col"}
     = render "layouts/header"
-    %main{class: "container mx-auto mt-28 px-5 flex"}
+    %main{class: "container mx-auto mt-28 px-5"}
       %div
         - flash.each do |message_type, message|
           - if message_type.eql? 'success'
